<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">flashfeso_lwj</string>
    <string name="str_sharedpreference_key">App_SharedPreference_Key</string>
    <string name="eleccion_del_metodo_de_reembolso" translatable="false">Favor de seleccionar el método de reembolso</string>
    <string name="cantidad_devuelta" translatable="false">Cantidad devuelta</string>
    <string name="reembolso_pendiente" translatable="false">Reembolso pendiente</string>
    <string name="no_se_necesita_comisiones_para_los_pagos_en_linea" translatable="false">(No se necesita comisiones para los pagos en línea, los pagos fuera de línea están sujetos a diferentes tasas de tramitación.)</string>
    <string name="si_tiene_problemas_con_el_pago_con_codigo_oxxo" translatable="false">Si tiene problemas con el pago con código, comuníquese con el servicio al cliente de la plataforma o con el personal de servicio al cliente de OXXO.</string>
    <string name="favor_de_usar_el_dispositivo_para" translatable="false">Favor de usar el dispositivo para</string>
    <string name="escanear_el_siguiente_codigo" translatable="false">escanear el siguiente código.</string>
    <string name="si_tiene_problemas_con_el_pago_con_codigo" translatable="false">Si tiene problemas con el pago con código, comuníquese con el servicio al cliente de la plataforma o con el personal de servicio al cliente de Openpay.</string>
    <string name="pago_online" translatable="false">Pago Online</string>
    <string name="pago_offline" translatable="false">Pago Offline</string>
    <string name="servicio_a_pagar" translatable="false">Servicio a pagar</string>
    <string name="total_a_pagar" translatable="false">Total a pagar</string>
    <string name="mxn" translatable="false">MXN</string>
    <string name="tasa_de_tramitacion_requerida" translatable="false">Tasa de tramitación requerida $</string>
    <string name="la_comision_por_recepcioon_del_pago" translatable="false">La comisión por recepción del pago varía de acuerdo a los términos y condiciones quecada cadena comercial establece.</string>
    <string name="fecha_limite_de_pago_z" translatable="false">Fecha límite de pago</string>
    <string name="en_caso_de_que_el_escaner_no_sea" translatable="false">En caso de que el escáner no sea capaz de leer el código de barras, escribir la referencia tal como se muestra.</string>
    <string name="quiero_pagar" translatable="false">Quiero pagar</string>
    <string name="clabe" translatable="false">CLABE</string>
    <string name="banco2" translatable="false">Banco：</string>
    <string name="beneficlario" translatable="false">Beneficlario：</string>
    <string name="la_cuenta_es_unica_por_cliente" translatable="false">La cuenta es única por cliente, no requiere referencia numérica. No es necessario enviar el comprobante,guárdalo para cualquier aclaración.</string>
    <string name="notas_importantes" translatable="false">NOTAS IMPORTANTES:</string>
    <string name="puedes_realizar_montos" translatable="false">a.Puedes realizar montos parciales a partir de $20 pesos.</string>
    <string name="solo_deposita_a_cuenta_a_nombre" translatable="false">b.Sólo deposita a cuenta a nombre</string>
    <string name="no_aceptes_cuentas_a_nombre_de_terceros" translatable="false">,no aceptes cuentas a nombre de terceros.</string>
    <string name="copia_exitosa" translatable="false">Copia exitosa</string>
    <string name="examen_de_los_prestamos" translatable="false">Exámen de los préstamos</string>
    <string name="importe_del_prestamo" translatable="false">Importe del préstamo</string>
    <string name="puede_tardar_unos_minutos" translatable="false">Puede tardar unos minutos.</string>
    <string name="ya_veo" translatable="false">Ya veo</string>
    <string name="modificar_la_cuenta_bancaria" translatable="false">Modificar la cuenta bancaria</string>
    <string name="por_favor_introduza_su_retroalimentacion" translatable="false">Por favor introduza su retroalimentación</string>
    <string name="fracaso_del_prestamo" translatable="false">Fracaso del\npréstamo</string>
    <string name="importe_de_los_gastos" translatable="false">Importe de los gastos</string>
    <string name="you_can_reapply_in_15_days" translatable="false">Siento informarle que su solicitud ha fallado.Puede volver a solicitar en 15 días.</string>
    <string name="you_can_reapply_on" translatable="false">Puede volver a solicitar en</string>
    <string name="comentarios" translatable="false">Comentarios/Susgerencias</string>
    <string name="discupe_las_molestias" translatable="false">Discupe las molestias ,envíe un comentaeio sobre su problema,lo solucionaremos lo antes posible.</string>
    <string name="enviar" translatable="false">Enviar</string>
    <string name="historia" translatable="false">Historia</string>
    <string name="agergar_cuenta_bancaria" translatable="false">Agregar cuenta bancaria</string>
    <string name="sixs" translatable="false">06</string>
    <string name="donde_te_depositamos" translatable="false">¿Dónde te depositamos?</string>
    <string name="consuita_tui_contrato_de_cuenta" translatable="false">Consulta tu contrato de cuenta o banco en caso de desconocer algún dato.</string>
    <string name="ingresa_tu_cuenta_bancaria" translatable="false">Ingresa tu cuenta bancaria</string>
    <string name="tipo_de_cuenta" translatable="false">Tipo de cuenta</string>
    <string name="tarjeta_18_digitos" translatable="false">CLABE 18 dígitos</string>
    <string name="tarjeta_16_digitos" translatable="false">Tarjeta 16 digitos</string>
    <string name="banco" translatable="false">Banco</string>
    <string name="tarjeta_de_debito" translatable="false">Tarjeta de débito</string>
    <string name="introduzca_el_numero_correcto_de_tarjeta_de_16_bits" translatable="false">Introduzca el número correcto de tarjeta</string>
    <string name="introduzca_el_banco" translatable="false">Por favor, introduzca el Banco</string>
    <string name="informacion_de_idetidad" translatable="false">Información de Identidad</string>
    <string name="five" translatable="false">05</string>
    <string name="para_poder_aprobar_tu_prestamo" translatable="false">Para poder aprobar tu préstamo.debemos verficar tu identidad.¡Es muy fácil!Puedes hacerlo desde aquí mismo.</string>
    <string name="frente_de_ine" translatable="false">Frente de INE/IFE</string>
    <string name="detras_de_ine" translatable="false">Detrás de INE/IFE</string>
    <string name="selfies_de_tu_rostro_completo" translatable="false">Selfies de tu rostro completo</string>
    <string name="curp" translatable="false">CURP</string>
    <string name="apellido_paterno" translatable="false">Apellido paterno</string>
    <string name="apellido_materno" translatable="false">Apellido materno</string>
    <string name="homoclave_de_rfc" translatable="false">Homoclave del RFC</string>
    <string name="favor_de_subir_una_foto_de_la_parte_frontal_de_su_identificacion" translatable="false">Favor de subir una foto de la parte frontal de su identificación</string>
    <string name="favor_de_subir_una_foto_de_la_parte_frontal_de_su_identificacion_primero" translatable="false">Favor de subir una foto de la parte frontal de su identificación primero</string>
    <string name="favor_de_subir_una_foto_de_la_parte_trasera_de_su_identificacion" translatable="false">Favor de subir una foto de la parte trasera de su identificación</string>
    <string name="favor_de_subir_una_foto_de_la_parte_trasera_de_su_identificacion_primero" translatable="false">Favor de subir una foto de la parte trasera de su identificación primero</string>
    <string name="favor_de_tomarse_una_selfie" translatable="false">Favor de tomarse una selfie</string>
    <string name="rellene_el_numero_de_identificacion_completo" translatable="false">Por favor, rellene el número de identificación completo</string>
    <string name="rellene_el_apellido_paterno" translatable="false">Por favor, rellene el apellido paterno</string>
    <string name="rellene_el_apellido_materno" translatable="false">Por favor, rellene el apellido materno</string>
    <string name="rellene_el_nombre_completo" translatable="false">Por favor, rellene el nombre completo</string>
    <string name="introduzca_el_numero_de_impuesto_correcto" translatable="false">Introduzca el número de impuesto correcto</string>
    <string name="inicio" translatable="false">Inicio</string>
    <string name="mi_cuenta" translatable="false">Mi Cuenta</string>
    <string name="informacion_de_contactos" translatable="false">Información de Contactos</string>
    <string name="four" translatable="false">04</string>
    <string name="ingresa_datos_de_tus_contactos" translatable="false">Ingresa datos de tus contactos.</string>
    <string name="referencia_1" translatable="false">Referencia       1</string>
    <string name="referencia_2" translatable="false">Referencia       2</string>
    <string name="relacion_contigo" translatable="false">Relación contigo</string>
    <string name="numero_de_celular" translatable="false">Número de celular</string>
    <string name="nombre_completo" translatable="false">Nombre completo</string>
    <string name="seleccione_la_relacion_con_el_primer_contacto" translatable="false">Seleccione la relación con el primer contacto</string>
    <string name="por_favor_seleccione_el_numero_de_telefono_del_primer_contacto" translatable="false">Por favor, seleccione el número de teléfono del primer contacto</string>
    <string name="introduzca_el_nombre_completo_del_primer_contacto" translatable="false">Introduzca el nombre completo del primer contacto</string>
    <string name="seleccione_la_relacion_con_el_segundo_contacto" translatable="false">Seleccione la relación con el segundo contacto</string>
    <string name="por_favor_seleccione_el_numero_de_telefono_del_segundo_contacto" translatable="false">Por favor, seleccione el número de teléfono del segundo contacto</string>
    <string name="introduzca_el_nombre_completo_del_segundo_contacto" translatable="false">Introduzca el nombre completo del segundo contacto</string>
    <string name="dos_contactos_no_pueden_tener_el_mismo_nmero" translatable="false">Dos contactos no pueden tener el mismo número</string>
    <string name="dos_contactos_no_pueden_tener_el_miusmo_nombre" translatable="false">Dos contactos no pueden tener el mismo nombre</string>
    <string name="no_puede_haber_dos_padres" translatable="false">No puede haber dos padres.</string>
    <string name="no_puede_tener_dos_conyuges" translatable="false">No puede tener dos cónyuges</string>
    <string name="historial_crediticio" translatable="false">Historial Crediticio</string>
    <string name="siguiente" translatable="false">Siguiente</string>
    <string name="cancelar" translatable="false">Cancelar</string>
    <string name="confirmar" translatable="false">Confirmar</string>
    <string name="login_phone_string1" translatable="false">Regístrate / Inicia sesión</string>
    <string name="login_phone_string2" translatable="false">con tu número celular</string>
    <string name="login_phone_string3" translatable="false">Cambiar número celular</string>
    <string name="login_phone_string4" translatable="false">+52</string>
    <string name="login_phone_string5" translatable="false">Enviar el código de nuevo</string>
    <string name="login_phone_string6" translatable="false">Retransmisión</string>
    <string name="login_phone_string7" translatable="false">Acepto</string>
    <string name="login_phone_string8" translatable="false">《Avisos de Privacidad》</string>
    <string name="six" translatable="false">/06</string>
    <string name="ingresa_por_favor" translatable="false">ingresa por favor</string>
    <string name="por_favor_seleccione" translatable="false">Por favor seleccione</string>
    <string name="por_favor_abra_la_ubicacion" translatable="false">Por favor abra la ubicación</string>
</resources>