<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_login_enter_telephone"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/color_419CFB"
        android:textSize="@dimen/sp_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/login_phone_string1"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/login_phone_string2"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_15" />

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_24"
        android:background="@drawable/shape_login_bg_phone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_23"
            android:gravity="center_vertical"
            android:text="@string/login_phone_string4"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <com.example.lwj_common.common.ui.controll.view.CommonClearEditText
            android:id="@+id/et_login_phone_number"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_6"
            android:drawablePadding="@dimen/dp_10"
            android:inputType="number"
            android:maxLength="10"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_edittext_clear"
            android:background="@null" />
    </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_14"
        android:text="@string/login_phone_string3"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/sp_12" />
</LinearLayout>