<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F2F2F2"
    android:orientation="vertical"
    tools:context=".flashfeso.ui.controll.activity.ComentariosActivity">

    <include
        android:id="@+id/header"
        layout="@layout/incl_common_bar" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:text="@string/discupe_las_molestias" />


    <EditText
        android:id="@+id/comentarios_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@drawable/bg_white_10"
        android:gravity="left"
        android:hint="@string/ingresa_por_favor"
        android:maxLength="500"
        android:orientation="vertical"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_15" />


    <TextView
        android:id="@+id/confirm"
        android:layout_width="@dimen/dp_260"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/bg_default_10"
        android:gravity="center"
        android:text="@string/enviar"
        android:textColor="@color/color_FFFFFF"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/historia_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:text="@string/historia"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_15" />

    <com.jude.easyrecyclerview.EasyRecyclerView
        android:id="@+id/ercv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_19"
        android:layout_marginBottom="@dimen/dp_25"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15" />

</LinearLayout>