<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F2F2F2"
    android:orientation="vertical"
    tools:context=".flashfeso.ui.controll.activity.AgergarCuentaBancariaActivity">


    <include
        android:id="@+id/header"
        layout="@layout/incl_common_bar" />

    <include
        android:id="@+id/progress"
        layout="@layout/incl_common_loading"
        android:visibility="gone" />

    <include
        android:id="@+id/error"
        layout="@layout/incl_common_error"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_140"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_18"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@drawable/bg_information_supplement_head_img"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_13"
                android:paddingRight="@dimen/dp_28"
                android:paddingBottom="@dimen/dp_25">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/dp_40"
                    android:text="@string/donde_te_depositamos"
                    android:textColor="@color/color_FFFFFF"
                    android:textSize="@dimen/sp_13" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/consuita_tui_contrato_de_cuenta"
                    android:textColor="@color/color_FFFFFF"
                    android:textSize="@dimen/sp_13" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_26"
                    android:layout_marginTop="@dimen/dp_20">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/sixs"
                        android:textColor="@color/color_FFFFFF"
                        android:textSize="@dimen/sp_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/six"
                        android:textColor="@color/color_FFFFFF"
                        android:textSize="@dimen/sp_17" />


                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@drawable/bg_white_10"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_15"
                android:paddingTop="@dimen/dp_30"
                android:paddingRight="@dimen/dp_15"
                android:paddingBottom="@dimen/dp_30">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingresa_tu_cuenta_bancaria"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_15" />

                <LinearLayout
                    android:id="@+id/tipo_de_cuenta_ll"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_height="@dimen/dp_44"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo_de_cuenta"
                        android:textColor="@color/color_333333"
                        android:textSize="@dimen/sp_15" />

                    <TextView
                        android:id="@+id/tipo_de_cuenta_tv"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="right|center_vertical"
                        android:text="@string/tarjeta_de_debito"
                        android:textColor="@color/color_666666"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/sp_12" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:src="@drawable/icon_arrow_right" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tarjeta_tt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tarjeta_16_digitos"
                        android:textColor="@color/color_333333"
                        android:textSize="@dimen/sp_15" />

                    <com.example.lwj_common.common.ui.controll.view.CommonClearEditText
                        android:id="@+id/tarjeta_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:background="@null"
                        android:drawableRight="@drawable/delete_big_icon"
                        android:drawablePadding="@dimen/dp_10"
                        android:gravity="right|center_vertical"
                        android:hint="@string/ingresa_por_favor"
                        android:inputType="number"
                        android:maxLength="19"
                        android:textColor="@color/color_666666"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/sp_12" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/banco_ll"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/banco"
                        android:textColor="@color/color_333333"
                        android:textSize="@dimen/sp_15" />

                    <TextView
                        android:id="@+id/banco_tv"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="right|center_vertical"
                        android:hint="@string/por_favor_seleccione"
                        android:textColor="@color/color_666666"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/sp_12" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:src="@drawable/icon_arrow_right" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_30"
                android:background="@drawable/bg_default_10"
                android:gravity="center"
                android:text="@string/siguiente"
                android:textColor="@color/color_FFFFFF"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>