<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginStart="@dimen/dp_7"
    android:layout_marginTop="@dimen/dp_30"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:visibility="visible"
    tools:showIn="@layout/activity_login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/color_419CFB"
        android:textSize="@dimen/sp_24" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_phone_string4"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/yzm_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_15" />

    </LinearLayout>

    <EditText
        android:letterSpacing="1"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/dp_10"
        android:background="@null"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_30"
        tools:text="989895"
        android:layout_width="@dimen/dp_290"
        android:layout_height="@dimen/dp_50" />

    <View
        android:layout_marginStart="@dimen/dp_8"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_login_line_verification_code"
        android:layout_width="@dimen/dp_290"
        android:layout_height="@dimen/dp_10" />

    <LinearLayout
        android:id="@+id/yzm_update_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_phone_string5"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/yzm_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <TextView
        android:id="@+id/yzm_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/login_phone_string6"
        android:textColor="@color/color_main_background"
        android:textSize="@dimen/sp_15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_18"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/yzm_privacy_img"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_22"
            android:paddingLeft="@dimen/dp_4"
            android:paddingTop="@dimen/dp_4"
            android:paddingRight="@dimen/dp_14"
            android:paddingBottom="@dimen/dp_4"
            android:scaleType="fitXY"
            android:src="@drawable/icon_agree" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_phone_string7"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:id="@+id/yzm_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/login_phone_string8"
            android:textColor="@color/color_main_background"
            android:textSize="@dimen/sp_13" />
    </LinearLayout>


</LinearLayout>