<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="@dimen/dp_280"
        android:layout_height="wrap_content"
        android:background="@color/color_FFFFFF"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/por_favor_abra_la_ubicacion"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:id="@+id/btn_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center">


            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_confirm_stroke"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_6"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_6"
                android:text="@string/cancelar"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/btn_confirm"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_weight="1"
                android:background="@drawable/bg_confirm"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_6"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_6"
                android:text="@string/confirmar"
                android:textColor="@color/color_FFFFFF"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>